# PPP

./: .gitignore  CLAUDE.md  LICENSE.md  README.md  RELEASE-NOTES.md  flippar  fppp  impose-4up  install.sh  isbnner  pdfmerge.py  ppp-pad.py  ppp.py  printydump.py  pyproject.toml  requirements.txt  singledingle
docs/: signature-page-layout.ods
old/: flippar  pdfmerge.py  ppp-pad.py  ppp.py  pppf  printydump.py  pstopper.sh
src/ppp/: __init__.py  _util.py  merge.py  pad.py  printydump.py  shell.py  workflow.py
